[gd_scene load_steps=2 format=3 uid="uid://m24oqakkakvk"]

[ext_resource type="Script" path="res://scenes/menu/main_menu.gd" id="1_s66o4"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s66o4")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -447.0
offset_top = 14.0
offset_right = 447.0
offset_bottom = 179.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 120
text = "Scribble Wizard"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -20.0
offset_right = 45.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="PlayGameButton" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Play Game"

[node name="QuitButton" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Quit"

[connection signal="pressed" from="Buttons/PlayGameButton" to="." method="_on_play_game_button_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
